[gd_scene load_steps=11 format=3 uid="uid://bpbw80iulgvec"]

[ext_resource type="Script" path="res://StartMenu.gd" id="1_4ll3g"]
[ext_resource type="Texture2D" uid="uid://rlwropyeght0" path="res://Assets/Packs/Gothicvania Cemetery/Environment/background.png" id="2_bt8en"]
[ext_resource type="Texture2D" uid="uid://m1o8a7hr4q15" path="res://Assets/Packs/Gothicvania Cemetery/Environment/mountains.png" id="3_uaypc"]
[ext_resource type="Texture2D" uid="uid://3p1x463i4e6e" path="res://Assets/Packs/Gothicvania Cemetery/Environment/graveyard.png" id="4_jd14s"]
[ext_resource type="AudioStream" uid="uid://d3dai52nfsivt" path="res://Rock Beat.mp3" id="5_j0tgs"]
[ext_resource type="AudioStream" uid="uid://dqwa2hhd2bhhw" path="res://Returning Knights Menu Theme.mp3" id="6_3qg8t"]

[sub_resource type="Animation" id="Animation_i7jxs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x2ek3"]
resource_name = "fadeIn"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gq485"]
resource_name = "fadeOut"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dicx6"]
_data = {
"RESET": SubResource("Animation_i7jxs"),
"fadeIn": SubResource("Animation_x2ek3"),
"fadeOut": SubResource("Animation_gq485")
}

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ll3g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "[b] Returning Knights [/b]"
fit_content = true
scroll_active = false
autowrap_mode = 0
tab_size = 10
text_direction = 1

[node name="StartGame" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_dicx6")
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Back" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(-1.52588e-05, -40)
scale = Vector2(1.17602, 1.17602)
texture = ExtResource("2_bt8en")
centered = false

[node name="Mountains" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(384, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Mountains"]
position = Vector2(0, 24)
scale = Vector2(2, 2.13407)
texture = ExtResource("3_uaypc")
centered = false

[node name="GraveYard" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(384, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/GraveYard"]
position = Vector2(0, 104)
scale = Vector2(1.19512, 1.19512)
texture = ExtResource("4_jd14s")
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_j0tgs")
volume_db = -3.748

[node name="MainMenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3qg8t")

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
